feat(auth): add register endpoint with bcrypt and default CLIENT role